--- a/kubernetes/prometheus-grafana/values.yaml
+++ b/kubernetes/prometheus-grafana/values.yaml
@@ -90,3 +90,12 @@ kube-prometheus-stack:
             lokiSearch: true
           serviceMap:
             datasourceUid: 'prometheus'
+promtail:
+  config:
+    snippets:
+      pipelineStages:
+        # not cri, because we're running in k3s with docker runtime
+        - docker: {}
+    # Loki service url
+    clients:
+      - url: http://loki-loki-distributed-gateway/loki/api/v1/push
