--- a/kubernetes/prometheus-grafana/Chart.yaml
+++ b/kubernetes/prometheus-grafana/Chart.yaml
@@ -7,12 +7,12 @@ dependencies:
   - name: kube-prometheus-stack
     version: 41.7.4
     repository: https://prometheus-community.github.io/helm-charts
-  # - name: promtail
-  #   version: 6.11.2
-  #   repository: https://grafana.github.io/helm-charts
-  # - name: loki-distributed
-  #   version: 0.69.16
-  #   repository: https://grafana.github.io/helm-charts
+  - name: promtail
+    version: 6.11.2
+    repository: https://grafana.github.io/helm-charts
+  - name: loki-distributed
+    version: 0.69.16
+    repository: https://grafana.github.io/helm-charts
   # - name: tempo-distributed
   #   version: 1.4.1
   #   repository: https://grafana.github.io/helm-charts
