--- a/kubernetes/prometheus-grafana/Chart.yaml
+++ b/kubernetes/prometheus-grafana/Chart.yaml
@@ -13,6 +13,6 @@ dependencies:
   - name: loki-distributed
     version: 0.69.16
     repository: https://grafana.github.io/helm-charts
-  # - name: tempo-distributed
-  #   version: 1.4.1
-  #   repository: https://grafana.github.io/helm-charts
+  - name: tempo-distributed
+    version: 1.4.1
+    repository: https://grafana.github.io/helm-charts
